<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Players</string>
    <string name="app_id">163563177162961</string>
    <string name="app_login">Login</string>
    <string name="login_login">Sign-in using Google</string>
    <string name="login_app_title">Players</string>
    <string name="login_app_subtitle">Web 2.0</string>
    <string name="login_no_google">There is no Google. RUUN!</string>
    <string name="main_menu_more">More</string>
    <string name="main_menu_logout">Sign-out</string>
    <string name="main_menu_feedback">Feedback</string>
    <string name="main_menu_about">About</string>
    <string name="main_title">Dashboard</string>
    <string name="main_buddies">Buddies</string>
    <string name="main_quick_match">Quick Match</string>
    <string name="main_player_profile">Player profile</string>
    <string name="main_player_profile_error">Error occurred. Try again.</string>
    <string name="main_player_matches_played">%d matches.</string>
    <string name="main_match_finish">Finish</string>
    <string name="main_latest_undisputed_match">Latest undisputed match</string>
    <string name="main_feedback_subject">[Players] Feedback</string>
    <string name="main_mail_pick">Send mail</string>
    <string name="main_red_team">"Red team: "</string>
    <string name="main_blue_team">"Blue team: "</string>
    <string name="buddies_title">Buddies</string>
    <string name="buddies_qr">Show QR</string>
    <string name="buddies_add">Add</string>
    <string name="buddies_no_buddies">You have no buddies. To add one tap the button on the title bar.</string>
    <string name="buddies_no_zing">In order to use this functionality please install Barcode Scanner (ZXing).</string>
    <string name="buddies_hello_error">In order to work you need Internet on both peers.</string>
    <string name="buddies_hello_ok">Hello sent successfully.</string>
    <string name="match_title">Quick Match</string>
    <string name="match_tap_to_pick">pick</string>
    <string name="main_no_latest_match">Currently there is no match going on. To create one tap Quick Match.</string>
    <string name="match_accept">Accept</string>
    <string name="match_not_enogh_players">There should be at least one player on each side to start.</string>
    <string name="match_creation_error">Internet is required to work.</string>
    <string name="match_select_player">Select player</string>
    <string name="match_score_error">Score numbers should be integers between 0 and 10. Only one 10 is allowed.</string>
    <string name="match_score_title">Submit score</string>
    <string name="match_set">Set</string>
    <string name="match_cancel">Cancel</string>
    <string name="about_title">About</string>
    <string name="player_title">Player profile</string>
    <string name="player_player_info">Player information</string>
    <string name="player_n_a">0 matches.</string>
    <string name="player_statistics">Game statistics</string>
    <string name="player_time_statistics">Time statistics</string>
    <string name="player_games">Games</string>
    <string name="player_winrate">"Win rate: "</string>
    <string name="player_scorepoints">"Average score points: "</string>
    <string name="player_error">An error occurred while fetching user details. Try again later.</string>

</resources>